--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body
 {
     width: 960px;
     margin: 0 auto;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
 }
 
 header
