--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body
 
 #container
 {
-    width: 960px;
+    width: 1020px;
     margin: 0 auto;
     background-color: rgb(255, 255, 255);
 }
@@ -19,7 +19,7 @@ body
 header
 {
     height: 100px;
-    width: 910px;
+    width: 970px;
     padding: 25px;
     background-color: rgb(60, 165, 108);
     margin-bottom: 10px;
@@ -27,7 +27,7 @@ header
 
 nav
 {
-    width: 940px;
+    width: 1000px;
     background-color: rgb(138, 216, 174);
     padding: 10px;
     margin-bottom: 10px;
@@ -42,8 +42,8 @@ nav li
 
 aside
 {
-    width: 200px;
-    height: 400px;
+    width: 240px;
+    height: 550px;
     margin: 0 10px 10px 0;
     padding: 10px;
     background-color: rgb(92, 190, 138);
@@ -52,8 +52,8 @@ aside
 
 section
 {
-    width: 710px;
-    height: 400px;
+    width: 730px;
+    height: 550px;
     margin: 0 0 10px 0;
     padding: 10px;
     background-color: rgb(25, 157, 86);
@@ -62,7 +62,28 @@ section
 
 footer
 {
-    padding: 10px;
+    padding: 20px;
     background-color: rgb(0, 98, 45);
     clear: both;
+}
+
+table
+{
+    border: solid 2px rgb(138, 216, 174);
+    border-collapse: collapse;
+    background-color: rgb(25, 157, 86);
+}
+
+tr, td, th
+{
+    border: 2px rgb(60, 165, 108);
+    padding: 5px;
+    width: 130;
+    text-align: center;
+}
+
+caption
+{
+    font-weight: bold;
+    margin: 5px;
 }
